# PyAthena

./: MANIFEST.in  pyproject.toml  setup.cfg
pyathena/: alembic.py  sqlalchemy_athena.py
tests/: conftest.py  test_athena_dialect_kwargs_override.py
tests/ddl/: test_visit_create_table.py
