[bdist_wheel]
universal = 1

[tool:pytest]
flake8-max-line-length = 100

[isort]
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=88

[mypy]
python_version = 3.6
follow_imports = silent
disallow_any_generics = True
strict_optional = True
check_untyped_defs = True
allow_redefinition = True
ignore_missing_imports = True
warn_redundant_casts = True
warn_no_return = True
warn_return_any = True
warn_unreachable = True
warn_unused_configs = True

[mypy-benchmarks.*]
ignore_errors = True

[mypy-tests.*]
ignore_errors = True

[metadata]
name = PyAthena
version = 2.2.0
# https://github.com/laughingman7743/PyAthena/blob/master/pyathena/__init__.py#L7
description = Python DB API 2.0 (PEP 249) client for Amazon Athena
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Database :: Front-Ends
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

homepage = https://github.com/laughingman7743/PyAthena/
authors =
    laughingman7743 <laughingman7743@gmail.com>

readme = README.rst
[options]
packages = pyathena
include_package_data = True
install_requires =
    boto3>=1.4.4
    botocore>=1.5.52
    tenacity>=4.1.0

[options.extras_require] = 
pandas = pandas>=1.0.0; pyarrow>=1.0.0
sqlalchemy = sqlalchemy>=1.0.0,<2.0.0
dev =
    awscli
    tox
    wheel
    twine
    pandas >=1.0.0
    pyarrow >=1.0.0
    sqlalchemy >=1.0.0, <2.0.0
    mypy
    pytest >=3.5
    pytest-cov
    pytest-flake8 >=1.0.1
    pytest-black
    pytest-isort
    pytest-xdist
    pytest-mypy
    codecov

[options.entry_points]
sqlalchemy.dialects =
    awsathena = pyathena.sqlalchemy_athena:AthenaDialect
